--- a/src/App.css
+++ b/src/App.css
@@ -1,374 +1,29 @@
-@import '../src/Fonts/Ubuntu/fonts.css';
+@import "../src/Fonts/Ubuntu/fonts.css";
 
+@import "./blocks/page/page.css";
+@import "./blocks/page/__container/page__container.css";
+@import "./blocks/page/__background/_desktop/page__background_desktop.css";
+@import "./blocks/page/__background/_desktop/-bot/page__background_desktop-bot.css";
+@import "./blocks/page/__background/_desktop/-top/page__background_desktop-top.css";
 
+@import "./blocks/header/header.css";
+@import "./blocks/header/__wrapper/header__wrapper.css";
+@import "./blocks/header/__text/header___text.css";
 
-.page {
-    width: 100%;
-    position: relative;
-    /* height: 1094px;*/
-    height: 100vh;
-     /* height: 200vh; */
-    background-color: #373AF5;
-    /* padding: 65px 40px 0; */
-    /* background-image: url(./img/Bg.svg); */
-    /* background-repeat: no-repeat; *
-    /* background-size: contain; */
-}
+@import "./blocks/weathers/weathers__container/weathers__container.css";
 
-@media(min-width: 320px) and (max-width: 768px){
-    .page {
-        /* padding: 32px 10px; */
-    }
-}
+@import "./blocks/weather/__title/weather__title.css";
+@import "./blocks/weather/__card/weather__card.css";
+@import "./blocks/weather/__card/_slider/weather__card_slider.css";
+@import "./blocks/weather/__date/weather__date.css";
+@import "./blocks/weather/__header/weather__header.css";
+@import "./blocks/weather/__icon/weather__icon.css";
+@import "./blocks/weather/__icon/_slider/weather__card_slider.css";
+@import "./blocks/weather/__inputs/weather__inputs.css";
+@import "./blocks/weather/__input/weather__input.css";
+@import "./blocks/weather/__select/weather__select.css";
+@import "./blocks/weather/__temp/weather__temp.css";
+@import "./blocks/weather/__title/weather__title.css";
+@import "./blocks/weather/__widget/weather__widget.css";
 
-@media(min-width: 1280px) and (max-width: 1439px){
-    .page {
-        height: 100%;
-        /* padding: 65px 252px 80px 252px; */
-    }
-}
-
-
-@media(min-width: 1440px){
-    .page {
-        padding: 0 45px;
-        height: 100%;
-    }
-}
-
-
-.page__container {
-    max-width: 1440px;
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-@media (min-width: 320px) and (max-width: 768px){
-    .page__container {
-        width: 100%;
-    }
-}
-
-.page__background_desktop-top {
-    background-image: url("./img/Background/Academy-Weather\ forecast-Bg-up-1.png");
-    background-repeat: no-repeat;
-    background-position-x: right;
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    right: 0;
-    z-index: 0;
-}
-
-.page__background_desktop-bottom {
-    background-image: url("./img/Background/Academy-Weather forecast-Bg-buttom.png");
-    background-repeat: no-repeat;
-    background-position-x: right;
-    background-position-x: left;
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    bottom: 0;
-    right: 0;
-}
-/* @media (min-width: 1280px){
-    .page__container {
-        width: 100%;
-    }
-} */
-
-.header__wrapper {
-    width: 775px;
-    height: 212px;
-}
-
-.header {
-    font-weight: bold;
-    font-size: 102px;
-    line-height: 100%;
-    color: #FFFFFF;
-    position: relative;
-}
-
-.header__text {
-position: absolute;
-right: 0;
-}
-@media (min-width: 320px) and (max-width: 768px){
-    .header{
-        font-size: 32px;
-    }
-
-    .header__wrapper {
-        width: 243px;
-        height: 64px;
-    }
-}
-
-.weathers__container {
-    display: flex;
-    margin-top: 60px;
-    width: 1324px;
-    justify-content: space-between;
-    z-index: 1;
-}
-
-@media(min-width: 320px) and (max-width: 768px){
-    .weathers__container {
-        flex-wrap: wrap;
-        width: 300px;
-    }
-}
-
-@media(min-width: 769px) and (max-width: 1439px){
-    .weathers__container  {
-        flex-direction: column;
-        margin: 0 auto;
-        width: 100%;
-        align-items: center;
-        margin-top: 60px;
-    }
-}
-
-@media(min-width: 1440px){
-    .weathers__container  {
-        flex-direction: row;
-        margin: 0 auto;
-        width: 100%;
-        margin-top: 60px;
-        /* align-items: center;
-         */
-        justify-content: space-between;
-    }
-}
-
-.weather__widget {
-    display: flex;
-    flex-direction: column;
-    max-width: 660px;
-    padding: 50px 58px 70px 58px;
-    align-items: center;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 4px rgba(4, 5, 73, 0.25), 14px 14px 20px rgba(5, 6, 114, 0.2);
-    border-radius: 8px;
-}
-
-@media(min-width: 320px) and (max-width: 768px){
-    .weather__widget {
-        max-width: 300px;
-        padding: 32px 24px 63px;
-    }
-
-    .weather__widget:last-child{
-      margin-top: 10px;
-    }
-}
-
-@media(min-width: 769px) and (max-width: 1439px){
-
-    .weather__widget:last-child{
-      margin-top: 34px;
-    }
-}
-
-@media(min-width: 1440px){
-
-    .weather__widget:last-child{
-      margin-top: 0;
-    }
-}
-
-
-
-
-.weather__header{
-    text-align: left;
-    width: 100%;
-    font-family: Ubuntu-Bold;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 32px;
-    line-height: 32px;
-    color: #2C2D76;
-}
-
-.weather__card {
-    display: flex;
-    flex-direction: column;
-    width: 544px;
-    margin-top: 54px;
-    background: #373AF5;
-    box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba(4, 5, 73, 0.25), 14px 14px 20px rgba(5, 6, 114, 0.2);
-    border-radius: 8px;
-    padding: 20px;
-}
-
-@media(min-width: 320px) and (max-width: 768px){
-    .weather__card {
-        flex-wrap: wrap;
-        width: 100%;
-    }
-}
-
-.weather__card_default {
-    background-color: white;
-    box-shadow: none;
-    margin-top: 64px;
-}
-
-.weather__date {
-    align-self: flex-start;
-    font-family: Ubuntu;
-font-style: normal;
-font-weight: bold;
-font-size: 16px;
-line-height: 24px;
-/* identical to box height, or 150% */
-
-
-/* #Base weak */
-
-color: #FFFFFF;
-}
-.weather__title{
-    font-family: Ubuntu;
-font-style: normal;
-font-weight: bold;
-font-size: 16px;
-line-height: 24px;
-margin-top: 24px;
-text-align: center;
-color: #8083A4;
-}
-.weather__temp {
-align-self: flex-end;
-font-family: Ubuntu;
-font-style: normal;
-font-weight: bold;
-font-size: 32px;
-line-height: 32px;
-color: #FFFFFF;
-}
-.weather__temp::after {
-content: '\00B0';
-}
-.weather__icon {
-    align-self: center;
-    width: 160px;
-    height: 160px;
-    display: flex;
-    flex-direction: column;
-}
-.weather__inputs{
-    display: flex;
-    justify-content: space-between;
-    width: 544px;
-    padding-top: 32px;
-}
-
-@media(min-width: 320px) and (max-width: 768px){
-    .weather__inputs {
-        flex-direction: column;
-        width: 100%;
-    }
-}
-.weather__select {
-    padding: 12px 16px;
-    width: 252px;
-    height: 48px;
-    background: rgba(128, 131, 164, 0.06);
-    border: 2px solid rgba(128, 131, 164, 0.2);
-    box-sizing: border-box;
-    border-radius: 8px;
-}
-
-.weather__input {
-    padding: 12px 16px;
-    width: 252px;
-    height: 48px;
-    background: rgba(128, 131, 164, 0.06);
-    border: 2px solid rgba(128, 131, 164, 0.2);
-    box-sizing: border-box;
-    border-radius: 8px;
-}
-
-@media(min-width: 320px) and (max-width: 768px){
-    .weather__input:last-child {
-        margin-top: 24px;
-    }
-}
-
-
-.slider {
-    width: 548px;
-    position: relative;
-}
-
-@media(min-width: 320px) and (max-width: 768px){
-    .slider {
-        width: 254px;
-    }
-}
-
-.slider__track {
-    display: flex;
-    overflow: hidden;
-    width:  100%;
-    justify-content: space-between;    
-    height: 320px;
-}
-
-.weather__card_slider {
-    min-width: 174px;
-    height: 238px;
-    margin-right: 10px;
-    transition:  0.5s;
-    justify-content: space-between;
-    background: #373AF5;
-/* Accent */
-
-border: 2px solid #373AF5;
-box-sizing: border-box;
-box-shadow: 0px 4px 4px rgba(4, 5, 73, 0.25), 14px 14px 20px rgba(5, 6, 114, 0.2);
-border-radius: 8px;
-}
-
-.weather__icon_slider{
-    width: 120px;
-    height: 120px;
-}
-
-.weather__card_slider:last-child {
-    margin-right: 0;
-}
-
-.slider__button {
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    border: none;
-    background: none;
-    cursor: pointer;
-}
-
-@media(min-width: 320px) and (max-width: 768px){
-    .slider__button {
-       display: none;
-    }
-}
-
-.slider__button_prev{
-top: 50%;
-left: -34px;
-background-image: url('./img/icons/24/chevron-left.png');
-}
-.slider__button_next{
-    top: 50%;
-    right: -34px;
-    background-image: url('./img/icons/24/chevron-left-1.png');
-}
+@import "./blocks/footer/__text/footer__text.css";
