--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
     width: 100%;
-    /*position: relative;*/
+    position: relative;
     min-height: 100vh;
     background-color: #373AF5;
 }
