--- a/src/blocks/page/__background/_desktop/-top/page__background_desktop-top.css
+++ b/src/blocks/page/__background/_desktop/-top/page__background_desktop-top.css
@@ -2,6 +2,6 @@
     background-image: url("../../../../../img/Background/Academy-Weather_forecast-Bg-up-1.png");
     background-position-x: right;
 
-    /* top: 0; */
-    /* right: 0; */
+    top: 0;
+    right: 0;
 }
