--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -13,7 +13,7 @@
 
 @media(min-width: 1280px) and (max-width: 1439px){
     .page {
-        height: 100%;
+        /* height: 100%; */
         /* padding: 65px 252px 80px 252px; */
     }
 }
