--- a/src/blocks/page/__background/_desktop/-bot/page__background_desktop-bot.css
+++ b/src/blocks/page/__background/_desktop/-bot/page__background_desktop-bot.css
@@ -1,7 +1,7 @@
 .page__background_desktop-bottom {
     background-image: url("../../../../../img/Background/Academy-Weather_forecast-Bg-buttom.png");
     background-position-x: left;
-    bottom: -80px;
+    bottom: 0;
     left: 0;
     background-position-y: bottom;
 
